hphp/test/zend/bad/ext/posix/tests/posix_getgrgid_basic.php
<?php 
  echo "Basic test of POSIX getgid and getgrid fucntions\n"; 
  	
  $gid = posix_getgid();
  $groupinfo = posix_getgrgid($gid);
  
  print_r($groupinfo);
  
?>
===DONE===